fix: prevent works images from flickering when hovered on, reduce size of stack images

--- a/index.css
+++ b/index.css
@@ -233,8 +233,8 @@ a {
 }
 
 .skills-image svg {
-    width: 100px;
-    height: 100px;
+    width: 60px;
+    height: 60px;
     cursor: pointer;
 }
 
@@ -288,6 +288,12 @@ a {
 
 .work-link:hover + .work-image {
     display: block;
+}
+
+.work-image:hover {
+    display: block;
+    cursor: pointer;
+
 }
 
 /* CONTACT */
@@ -356,6 +362,14 @@ a {
   padding-top: 0.5rem;
   color: var(--col-gray);
   font-size: 0.8rem;
+}
+
+.contact-link .social {
+  transition: var(--transition-ease);
+}
+
+.contact-link .social:hover {
+  color: var(--clr-orange);
 }
 
 /* FOOTER */
